# shortcircuit

./: .gitattributes  .gitignore  .opencodeignore  AGENTS.md  README.md  build.py  create_dmg.py  create_tarball.py  debug_connection.py  debug_qt.py  pyproject.toml  requirements.txt  resources.qrc  run_tests.py  shortcircuit.spec  test_esi_discovery.py  test_esi_refresh.py
.gemini/: settings.json
.github/workflows/: appimage.yml  build.yml  main.yml
docs/: multi-source-spec.md
examples/tripwire/: example_0.json  example_1.json  example_2.json  example_3.json
src/: debug_ui_colors.py  main.py
src/qt/etc/: qt.conf
src/resources/: app.icns
src/shortcircuit/: __init__.py  app.py  resources.py
src/shortcircuit/model/: connection_db.py  esi_processor.py  evedb.py  evescout.py  evescout_source.py  gui_map_sources.py  gui_source_toggles.py  logger.py  mapper_registry.py  mapsource.py  navigation.py  navprocessor.py  pathfinder.py  pathfinder_source.py  solarmap.py  source_manager.py  test_connection_db.py  test_migration.py  test_pathfinder.py  test_solarmap.py  test_tripwire.py  test_tripwire_gate.py  test_wanderer.py  test_wanderer_source.py  tripwire.py  tripwire_source.py  versioncheck.py  wanderer.py  wanderer_source.py
src/shortcircuit/model/esi/: esi.py  server.py
src/shortcircuit/model/utility/: configuration.py  gui_about.py  gui_main.py  gui_sources.py  gui_tripwire.py
