[project]
name = "shortcircuit"
version = "2.1.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Rustam Gubaydullin", email = "secondfry@gmail.com" }
]
dependencies = [
    "pyside6>=6.6.0",
    "httpx>=0.27.0",
    "typing-extensions>=4.9.0",
    "pyqtdarktheme>=2.1.0",
    "semver>=3.0.0",
    "python-dateutil>=2.8.2",
    "appdirs>=1.4.4",
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "types-requests>=2.31.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
check_untyped_defs = true
ignore_missing_imports = true